# university-pythonweb-hw-10

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init.sql  main.py  pyproject.toml  sync_databases.py  sync_databases_OLD.py
src/conf/: config.py  constants.py  messages.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: user.py
src/services/: auth.py  contacts.py
